# bank-address-chatbot

./: LICENSE  README.md  data_processing.yml  index.html  pyproject.toml  requirements.txt  script.js
.github/workflows/: app.yaml  data_processing.yml  export-requirements.yml
data/: addresses.json  bank_locations_geocoded.csv  codes-postaux-localites-2018.xlsx  detail-implantation-bancaire-2022.xlsx
scripts/: create_address_json.py  data_processing.py  load_data.py  python create_address_json.py
static/: Procfile  index.html  script.js  style.css
