[tool.poetry]
name = "bank-address-chatbot"
version = "0.1.0"
description = "..."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
requests = "^2.32.3"
pytest = "^6.2.5"
openpyxl = "^3.1.5"

[tool.poetry.scripts]
bank-chatbot = "src.bank_address_chatbot.main:main"
